# CDMClient

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish_package.yml
cdm_client/: cdm_client.py  config.py  database_adapter.py  migrate_torrents.py  qbittorrent_adapter.py  torent_client_factory.py  torrent_client_adapter_base.py  torrent_client_factory.py  transmission_adapter.py
